--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: "HoGa-News-Wall"
 title: "HoGa-News-Wall"
 description: "News Aggregator für den HoGa Markt"
 logo: 'assets/images/logo-filosof.png'
-favicon: 'assets/images/logo.png'
+favicon: 'assets/images/favicon.png'
 baseurl: /HoGa-News-Wall
 google_analytics: 'UA-xxxxxxxx-1'
 disqus: 'demowebsite'
