--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "HoGa-News-Wall"
 title: "HoGa-News-Wall"
-description: "News Aggregator für den HoGa Markt"
+description: "HoGa-News-Wall"
 logo: 'assets/images/logo-filosof.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: /HoGa-News-Wall
