--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ favicon: 'assets/images/favicon.ico'
 baseurl: /HoGa-News-Wall
 google_analytics: 'UA-xxxxxxxx-1'
 disqus: 'demowebsite'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+mailchimp-list: 'demowebsite'
 include: ["_pages"]
 permalink: /:title/
 email: https://www.filosof.de
